# Memory-Allocation-GC-Visualizer

./: README.md
backend/: CMakeLists.txt
backend/include/: AllocationStrategy.h  MemoryBlock.h  SessionLogger.h  VirtualHeap.h
backend/src/: AllocationStrategy.cpp  MemoryBlock.cpp  SessionLogger.cpp  VirtualHeap.cpp  main.cpp
frontend/: account-panel.css  account-panel.js  dashboard.html  forgot-password.html  index.html  landing.html  login.html  reset-password.html  signup.html  simulator.js  style.css
frontend/css/: dashboard.css  site.css
frontend/js/: api.js  dashboard.js  forgot-password.js  heap-field.js  login.js  reset-password.js  signup.js  simulations-api.js  tilt-cards.js
server/: .env.example  .gitignore  README.md  package-lock.json  package.json
server/src/: db.js  server.js
server/src/auth/: auth.controller.js  auth.routes.js  auth.validation.js
server/src/middleware/: rateLimit.js  requireAuth.js  validate.js
server/src/simulations/: simulations.controller.js  simulations.routes.js  simulations.validation.js
server/src/utils/: mailer.js  tokens.js
